sample/retrieveUnpackaged/objects/Competition__c.object
<CustomObject>
    <description>Object that holds data for competition.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Competitions</relationshipLabel>
        <relationshipName>Competitions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hide_Direct_Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Direct Debit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Paperless__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Paperless</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_DD_Clicks__c</fullName>
        <label>Number of DD Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Paperless_Clicks__c</fullName>
        <label>Number of Paperless Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Competition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Competition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>